<resources>
    <string name="app_name">Persegi Panjang</string>
    <string name="info_pp">Luas Persegi Panjang</string>
    <string name="panjang">Panjang (cm)</string>
    <string name="lebar">Lebar (cm)</string>
    <string name="hitung">Hitung</string>
    <string name="panjang_invalid">Keterangan panjang harus diisi.</string>
    <string name="lebar_invalid">Keterangan lebar harus diisi.</string>
    <string name="hapus">Hapus</string>
    <string name="hasilLuas">Hasil : %1$.2f cm2</string>
    <string name="judul_fragment2">Rumus</string>
    <string name="saran_rumus1">Luas Persegi :\n\nL = s x s</string>
    <string name="saran_rumus2">Luas Jajar Genjang :\n\nL = a x t</string>
    <string name="saran_rumus3">Luas Segitiga :\n\nL = 1/2a x t</string>
    <string name="saran_rumus4">Luas Trapesium :\n\nL = 1/2 x jumlah sisi sejajar x t</string>
    <string name="rumus_lainnya">Rumus Lainnya</string>
    <string name="copyright">Aplikasi hitung untuk rumus luas persegi panjang dibuat untuk mempermudah
    setiap orang dalam membantu perhitungan luas persegi panjang dan pada aplikasi ini terdapat
        juga rumus-rumus bangun datar lainnya.</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="hasil_x">Hasil Luas Persegi Panjang: %1$.0f cm2</string>
    <string name="data_x">P : %1$.0f cm - L : %2$.0f cm</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Apakah anda yakin untuk menghapus seluruh histori?</string>
    <string name="hapus2">Hapus</string>
    <string name="batal">Batal</string>
    <string name="bagikan">Bagikan</string>
    <string name="share_template">Panjang : %1$s cm\nLebar : %2$s cm\n\nLuas Persegi Panjang\n%3$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rumus_bruang">Bangun Ruang</string>
    <string name="empty">Belum ada data</string>
    <string name="koneksi_error">Koneksi Error</string>
    <string name="nama_channel">Updater</string>
    <string name="deskripsi_channel">Update Data Bangun Ruang Otomatis</string>
    <string name="notif_judul">Rumus baru sudah masuk</string>
    <string name="notif_text">Yuk sama-sama kita lihat dan pelajari !</string>

</resources>